--- a/coding/templates/coding/base.html
+++ b/coding/templates/coding/base.html
@@ -52,15 +52,15 @@
             <nav id="navbar-main" aria-label="Primary navigation" class="navbar navbar-main navbar-expand-lg navbar-theme-primary headroom navbar-light navbar-transparent navbar-theme-primary">
                 <div class="container position-relative">
                     <a class="navbar-brand shadow-soft py-2 px-3 rounded border border-light mr-lg-4" href="{% url 'coding:index' %}">
-                        <img class="navbar-brand-dark" src="./assets/img/brand/dark.svg" alt="Logo light">
-                        <img class="navbar-brand-light" src="./assets/img/brand/dark.svg" alt="Logo dark">
+                        <img class="navbar-brand-dark" src="{% static 'img/favicon/dark.svg' %}" alt="Logo light">
+                        <img class="navbar-brand-light" src="{% static 'img/favicon/dark.svg' %}" alt="Logo dark">
                     </a>
                     <div class="navbar-collapse collapse" id="navbar_global">
                         <div class="navbar-collapse-header">
                             <div class="row">
                                 <div class="col-6 collapse-brand">
-                                    <a href="./index.html" class="navbar-brand shadow-soft py-2 px-3 rounded border border-light">
-                                        <img src="./assets/img/brand/dark.svg" alt="Themesberg logo">
+                                    <a href="{% url 'coding:index' %}" class="navbar-brand shadow-soft py-2 px-3 rounded border border-light">
+                                        <img src="{% static 'img/favicon/dark.svg' %}" alt="Coding sky logo">
                                     </a>
                                 </div>
                                 <div class="col-6 collapse-close">
@@ -68,112 +68,34 @@
                                 </div>
                             </div>
                         </div>
+
                         <ul class="navbar-nav navbar-nav-hover align-items-lg-center">
+                            <li class="nav-item">
+                                <a href="{% url 'coding:gamePage' %}" class="nav-link">Game</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link">Solution</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link">Quiz</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link">About</a>
+                            </li>
+
                             <li class="nav-item dropdown">
                                 <a href="#" class="nav-link" data-toggle="dropdown" >
-                                    <span class="nav-link-inner-text">Pages</span>
+                                    <span class="nav-link-inner-text">Download</span>
                                     <span class="fas fa-angle-down nav-link-arrow ml-2"></span>
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="./html/pages/about.html">About</a></li>
-                                    <li><a class="dropdown-item" href="./html/pages/pricing.html">Pricing</a></li>
-                                    <li><a class="dropdown-item" href="./html/pages/contact.html">Contact</a></li>
-                                    <li><a class="dropdown-item" href="./html/pages/sign-in.html">Sign in</a></li>
-                                    <li><a class="dropdown-item" href="./html/pages/sign-up.html">Sign up</a></li>
+                                    <li><a class="dropdown-item" href="./html/pages/about.html">Windows</a></li>
+                                    <li><a class="dropdown-item" href="./html/pages/pricing.html">Linux</a></li>
+                                    <li><a class="dropdown-item" href="./html/pages/contact.html">MacOS</a></li>
                                 </ul>
-                            </li>
-                            <li class="nav-item dropdown mega-dropdown">
-                                <a href="#" class="nav-link" data-toggle="dropdown" >
-                                    <span class="nav-link-inner-text">Components</span>
-                                    <span class="fas fa-angle-down nav-link-arrow ml-2"></span>
-                                </a>
-                                <div class="dropdown-menu">
-                                    <div class="row">
-                                        <div class="col-lg-6 inside-bg d-none d-lg-block">
-                                            <div class="justify-content-center bg-primary text-white">
-                                                <div class="px-6 pb-5 pt-3">
-                                                    <img src="./assets/img/megamenu-image.jpg" alt="Pixel Components">
-                                                </div>
-                                                <div class="z-2 pb-4 text-center">
-                                                    <a href="./html/components/all.html"  class="btn btn-primary mb-2 mb-sm-0 mr-3 text-secondary">
-                                                        <span class="mr-1"><span class="fas fa-th-large"></span></span>
-                                                        All components
-                                                    </a>
-                                                    <a href="https://themesberg.com/docs/neumorphism-ui/components/alerts" target="_blank" class="btn btn-primary mb-2 mb-sm-0">
-                                                        <span class="mr-1"><span class="fas fa-book"></span></span>
-                                                        Docs v1.0
-                                                    </a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col pl-0">
-                                            <ul class="list-style-none">
-                                                <li><a class="dropdown-item" href="./html/components/accordions.html">Accordions</a></li>
-                                                <li><a class="dropdown-item" href="./html/components/alerts.html">Alerts</a></li>
-                                                <li><a class="dropdown-item" href="./html/components/badges.html">Badges</a></li>
-                                                <li><a class="dropdown-item" href="./html/components/bootstrap-carousels.html">Bootstrap Carousels</a></li>
-                                                <li><a class="dropdown-item" href="./html/components/breadcrumbs.html">Breadcrumbs</a></li>
-                                                <li><a class="dropdown-item" href="./html/components/buttons.html">Buttons</a></li>
-                                                <li><a class="dropdown-item d-flex align-items-center justify-content-between" href="https://themesberg.com/docs/neumorphism-ui/plugins/jquery-counters/" target="_blank">Counters <span class="badge badge-dark ml-3">Pro</span></a></li>
-                                                <li><a class="dropdown-item" href="./html/components/cards.html">Cards</a></li>
-                                                <li><a class="dropdown-item d-flex align-items-center justify-content-between" href="https://themesberg.com/docs/neumorphism-ui/components/e-commerce/" target="_blank">E-commerce <span class="badge badge-dark ml-3">Pro</span></a></li>
-                                            </ul>
-                                        </div>
-                                        <div class="col pl-0">
-                                            <ul class="list-style-none">
-                                                <li><a class="dropdown-item" href="./html/components/forms.html">Forms</a></li>
-                                                <li><a class="dropdown-item d-flex align-items-center justify-content-between" href="https://themesberg.com/docs/neumorphism-ui/components/icon-boxes/" target="_blank">Icon Boxes <span class="badge badge-dark ml-3">Pro</span></a></li>
-                                                <li><a class="dropdown-item" href="./html/components/modals.html">Modals</a></li>
-                                                <li><a class="dropdown-item" href="./html/components/navs.html">Navs</a></li>
-                                                <li><a class="dropdown-item d-flex align-items-center justify-content-between" href="https://themesberg.com/docs/neumorphism-ui/plugins/owl-carousel/" target="_blank">Owl Carousels <span class="badge badge-dark ml-3">Pro</span></a></li>
-                                                <li><a class="dropdown-item" href="./html/components/pagination.html">Pagination</a></li>
-                                                <li><a class="dropdown-item" href="./html/components/popovers.html">Popovers</a></li>
-                                                <li><a class="dropdown-item" href="./html/components/progress-bars.html">Progress Bars</a></li>
-        
-                                            </ul>
-                                        </div>
-                                        <div class="col pl-0">
-                                            <ul class="list-style-none">
-                                                <li><a class="dropdown-item d-flex align-items-center justify-content-between" href="https://themesberg.com/docs/neumorphism-ui/components/icon-boxes/#steps" target="_blank">Steps <span class="badge badge-dark ml-3">Pro</span></a></li>
-                                                <li><a class="dropdown-item" href="./html/components/tables.html">Tables</a></li>
-                                                <li><a class="dropdown-item" href="./html/components/tabs.html">Tabs</a> </li>
-                                                <li><a class="dropdown-item" href="./html/components/toasts.html">Toasts</a> </li>
-                                                <li><a class="dropdown-item d-flex align-items-center justify-content-between" href="https://themesberg.com/docs/neumorphism-ui/components/timelines/" target="_blank">Timelines <span class="badge badge-dark ml-3">Pro</span></a></li>
-                                                <li><a class="dropdown-item" href="./html/components/tooltips.html">Tooltips</a></li>
-                                                <li><a class="dropdown-item" href="./html/components/typography.html">Typography</a></li>
-                                                <li><a class="dropdown-item d-flex align-items-center justify-content-between" href="https://demo.themesberg.com/neumorphism-ui-pro/html/components/widgets.html" target="_blank">Widgets <span class="badge badge-dark ml-3">Pro</span></a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a href="#" class="nav-link" data-toggle="dropdown" >
-                                    <span class="nav-link-inner-text">Support</span>
-                                    <span class="fas fa-angle-down nav-link-arrow ml-2"></span>
-                                </a>
-                                <div class="dropdown-menu dropdown-menu-lg">
-                                    <div class="col-auto px-0" data-dropdown-content>
-                                        <div class="list-group list-group-flush">
-                                            <a href="https://themesberg.com/docs/neumorphism-ui/getting-started/quick-start/" target="_blank" class="list-group-item list-group-item-action d-flex align-items-center p-0 py-3 px-lg-4">
-                                                <span class="icon icon-sm icon-secondary"><span class="fas fa-file-alt"></span></span>
-                                                <div class="ml-4">
-                                                    <span class="text-dark d-block">Documentation<span class="badge badge-sm badge-secondary ml-2">v1.0</span></span>
-                                                    <span class="small">Examples and guides</span>
-                                                </div>
-                                            </a>
-                                            <a href="https://github.com/themesberg/neumorphism-ui/issues" target="_blank" class="list-group-item list-group-item-action d-flex align-items-center p-0 py-3 px-lg-4">
-                                                <span class="icon icon-sm icon-secondary"><span class="fas fa-microphone-alt"></span></span>
-                                                <div class="ml-4">
-                                                    <span class="text-dark d-block">Support</span>
-                                                    <span class="small">Looking for answers? Ask us!</span>
-                                                </div>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
+                            </li>                            
                         </ul>
+
                     </div>
                     <div class="d-flex align-items-center">
                         <a href="https://themesberg.com/product/ui-kits/neumorphism-ui-pro" target="_blank" class="btn btn-primary text-secondary d-none d-md-inline-block mr-3"><i class="far fa-paper-plane mr-2"></i> Upgrade to PRO</a>
@@ -190,24 +112,7 @@
         <main>
             <section class="section section bg-soft pb-5 overflow-hidden z-2">
                 <div class="container z-2">
-                    {% block body_block %}{% endblock %}
-                    <div class="row justify-content-center text-center pt-6">
-                        <div class="col-lg-8 col-xl-8">
-                            
-                            <h1 class="display-2 mb-3">Neumorphism UI</h1>
-                            <p class="lead px-md-6 mb-5">Neumorphism inspired <strong>User Interface Kit</strong> that will help you prototype and design beautiful, creative and modern websites.</p>
-                            <div class="d-flex flex-column flex-wrap flex-md-row justify-content-md-center mb-5">
-                                <a href="https://themesberg.com/product/ui-kits/neumorphism-ui" target="_blank" class="btn btn-primary mb-3 mb-lg-0 mr-3"><i class="fas fa-cloud-download-alt mr-2"></i> Download</a>
-                                <div class="mt-2">
-                                    <a class="github-button" href="https://github.com/themesberg/neumorphism-ui" data-color-scheme="no-preference: dark; light: light; dark: light;" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star themesberg/neumorphism-ui on GitHub">Star</a>
-                                </div>
-                            </div>
-                            <a href="https://themesberg.com" target="_blank" class="d-flex align-items-center justify-content-center flex-column">
-                                <img src="./assets/img/themesberg.svg" height="25" class="mb-3" alt="Themesberg Logo">
-                                <span class="text-muted font-small">A Themesberg production</span>
-                            </a>
-                        </div>
-                    </div>
+                    {% block body_block %}{% endblock %}                    
                 </div>
             </section>
 
@@ -244,7 +149,7 @@
     <script src="{% static 'vendor/smooth-scroll/dist/smooth-scroll.polyfills.min.js' %}"></script>
     <script src="{% static 'vendor/prismjs/prism.js' %}"></script>
 
-    <script async defer src="https://buttons.github.io/buttons.js' %}"></script>
+    <script async defer src="{% static 'js/buttons.js' %}"></script>
 
     <!-- Neumorphism JS -->
     <script src="{% static 'js/neumorphism.js' %}"></script>
