--- a/coding/templates/coding/index.html
+++ b/coding/templates/coding/index.html
@@ -11,16 +11,19 @@
         <h1 class="display-2 mb-3">
             Coding Sky
         </h1>
-        <p class="lead px-md-6 mb-5">Neumorphism inspired <strong>User Interface Kit</strong> that will help you prototype and design beautiful, creative and modern websites.</p>
+        <p class="lead px-md-6 mb-5">
+            Coding Sky is a web application developed for beginners to learn basic programming knowledge. 
+            The application is based on a <strong>Coding Game</strong> developed by Unity, where players can learn coding by playing the game and viewing the reference answers given, and can test their knowledge in the <strong>Quiz</strong> page.
+            <br>
+            For better user experience, please use a desktop or laptop to play the game.
+            <br>
+            If you want to use it offline, please download the corresponding version of the standalone game installation package.
+        </p>
         <div class="d-flex flex-column flex-wrap flex-md-row justify-content-md-center mb-5">
-            <a href="https://themesberg.com/product/ui-kits/neumorphism-ui" target="_blank" class="btn btn-primary mb-3 mb-lg-0 mr-3"><i class="fas fa-cloud-download-alt mr-2"></i> Download</a>
-            <div class="mt-2">
-                <a class="github-button" href="https://github.com/themesberg/neumorphism-ui" data-color-scheme="no-preference: dark; light: light; dark: light;" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star themesberg/neumorphism-ui on GitHub">Star</a>
-            </div>
+            <a href="#" target="_blank" class="btn btn-primary mb-3 mb-lg-0 mr-3"><i class="fas fa-cloud-download-alt mr-2"></i> Download</a>
         </div>
-        <a href="https://themesberg.com" target="_blank" class="d-flex align-items-center justify-content-center flex-column">
-            <img src="./assets/img/themesberg.svg" height="25" class="mb-3" alt="Themesberg Logo">
-            <span class="text-muted font-small">A Themesberg production</span>
+        <a href="https://github.com/Siriusq" target="_blank" class="d-flex align-items-center justify-content-center flex-column">
+            <img src="{% static 'img/large/logo_transparent.png' %}" height="200" class="mb-3" alt="Coding Sky Logo">
         </a>
     </div>
 </div>
