--- a/coding/templates/coding/base.html
+++ b/coding/templates/coding/base.html
@@ -115,20 +115,28 @@
                     {% block body_block %}{% endblock %}                    
                 </div>
             </section>
-
-
-                
-
-                <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-        {#        <-- FOOTER -->#}
-                <footer class="container">
-                    <p class="float-end"><a href="#">Back to top</a></p>
-                    <p>&copy; 2020–2021 Coding Sky. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-                </footer>
-        
-            </main>
-
-
+        </main>
+            
+        {#     <-- FOOTER -->#}
+        <footer class="d-flex pb-2 pt-3 pt-md-4 border-top border-light bg-primary">
+            <div class="container">                  
+                 <div class="row">
+                    <div class="col">                       
+                        <a href="https://github.com/Siriusq" target="_blank" class="d-flex justify-content-center">
+                            <img src="{% static 'img/large/logo1.svg' %}" height="100" class="mb-2" alt="Themesberg Logo">
+                        </a>
+                        <div class="d-flex text-center justify-content-center align-items-center" role="contentinfo">
+                            <p class="font-weight-normal font-small mb-0">Copyright © Sirius
+                                <span class="current-year">2021</span>. All rights reserved.
+                            </p>
+                        </div>
+                        <div class="d-flex text-center justify-content-center align-items-center" role="contentinfo">
+                            <p class="font-weight-normal font-small mb-0"><a href="#">Back to top</a></p>
+                        </div>                             
+                    </div>
+                </div>
+            </div>
+        </footer>
     
 
     <!-- JS -->
