--- a/coding/templates/coding/login.html
+++ b/coding/templates/coding/login.html
@@ -2,6 +2,34 @@
 
 {% load static%}
 
-{% block content %}
+{% block title_block %}
+    Login
+{% endblock %}
 
+{% block body_block %}
+<div class="main">  
+    <p align="center" class="sign">  
+    Hello   
+    </p>  
+    <form class="form1" method="POST">  
+    {% csrf_token %}  
+    {% if messages %}  
+   <ul class="messages">  
+    {% for message in messages %}  
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %} style="color:red;">{{ message }}</li>  
+    {% endfor %}  
+   </ul>  
+   {% endif %}  
+    <input align="center" class="un" placeholder="Username" name="username" type="text"/>  
+    <input align="center" class="pass" placeholder="Password" name="password" type="password"/>  
+    <button align="center" type="submit" class="submit">  
+    Sign in  
+    </button>  
+    </form>  
+    <p align="center" class="forgot">  
+    <a href="register">  
+    Don't have an account? Register  
+    </a>  
+    </p>  
+    </div>
 {% endblock %}
