--- a/coding/templates/coding/dashboard.html
+++ b/coding/templates/coding/dashboard.html
@@ -23,11 +23,11 @@
     <br>  
     </form>  
     <form class="form1">  
-    <a href="create-quiz"><button type="button" class="btn btn-rounded btn-primary" style="background-color:purple !important;">CREATE QUIZ</button></a>  
+    <a href="create_quiz"><button type="button" class="btn btn-rounded btn-primary" style="background-color:purple !important;">CREATE QUIZ</button></a>  
     <br>  
     </form>  
     <form class="form1">  
-    <a href="create-questions"><button type="button" class="btn btn-rounded btn-primary" style="background-color:purple !important;">CREATE QUESTION</button></a>  
+    <a href="create_questions"><button type="button" class="btn btn-rounded btn-primary" style="background-color:purple !important;">CREATE QUESTION</button></a>  
     <br>  
    </form>  
     <form class="form1">  
