--- a/coding/templates/coding/quiz.html
+++ b/coding/templates/coding/quiz.html
@@ -27,7 +27,7 @@
     <br>  
     <p>Total Questions: {{quiz.total_questions}} </p>  
     <br>  
-    <a href="answer-quiz/{{quiz.name}}" class="btn btn-danger">Start Test</a>  
+    <a href="answer_quiz/{{quiz.name}}" class="btn btn-danger">Start Test</a>  
     <br>  
     <ul class="pagination">  
     <li class="page-item disabled">  
