--- a/coding/templates/coding/login.html
+++ b/coding/templates/coding/login.html
@@ -1,35 +1,17 @@
-{% extends 'coding/base.html' %}
+{% extends "base.html" %} {% block content %}
 
-{% load static%}
+<div class="col-md-6 offset-md-3">
+    <h1 class="text-center">Login</h1>
+    <form method="POST">
+        {% csrf_token %}
+        <div class="form-group">
+            <input type="text" class="form-control" placeholder="Enter Registeration Id" name="username">
+        </div>
+        <div class="form-group">
+            <input type="password" class="form-control" placeholder=" Enter Password" name="password">
+        </div>
+        <button type="submit" class="btn btn-primary">Login</button>
+    </form>
+</div>
 
-{% block title_block %}
-    Login
-{% endblock %}
-
-{% block body_block %}
-<div class="main">  
-    <p align="center" class="sign">  
-    Hello   
-    </p>  
-    <form class="form1" method="POST">  
-    {% csrf_token %}  
-    {% if messages %}  
-   <ul class="messages">  
-    {% for message in messages %}  
-    <li{% if message.tags %} class="{{ message.tags }}"{% endif %} style="color:red;">{{ message }}</li>  
-    {% endfor %}  
-   </ul>  
-   {% endif %}  
-    <input align="center" class="un" placeholder="Username" name="username" type="text"/>  
-    <input align="center" class="pass" placeholder="Password" name="password" type="password"/>  
-    <button align="center" type="submit" class="submit">  
-    Sign in  
-    </button>  
-    </form>  
-    <p align="center" class="forgot">  
-    <a href="register">  
-    Don't have an account? Register  
-    </a>  
-    </p>  
-    </div>
 {% endblock %}
