--- a/coding/templates/coding/login.html
+++ b/coding/templates/coding/login.html
@@ -1,4 +1,6 @@
-{% extends "base.html" %} {% block content %}
+{% extends 'coding/base.html' %} 
+
+{% block body_block %}
 
 <div class="col-md-6 offset-md-3">
     <h1 class="text-center">Login</h1>
