--- a/coding/templates/coding/progress.html
+++ b/coding/templates/coding/progress.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends 'coding/base.html' %}
 {% load i18n %}
 
 {% load quiz_tags %}
@@ -6,7 +6,7 @@
 {% block title %} {% trans "Progress Page" %} {% endblock %}
 {% block description %} {% trans "User Progress Page" %} {% endblock %}
 
-{% block content %}
+{% block body_block %}
 
   {% if cat_scores %}
 
