--- a/coding/templates/coding/quiz_detail.html
+++ b/coding/templates/coding/quiz_detail.html
@@ -1,10 +1,10 @@
-{% extends 'base.html' %}
+{% extends 'coding/base.html' %}
 {% load i18n %}
 {% block title %}
 {{ quiz.title }}
 {% endblock %}
 
-{% block content %}
+{% block body_block %}
 <h2>{{ quiz.title }}</h2>
 <h3>{% trans "Category" %}: {{ quiz.category }}</h3>
 {% if quiz.single_attempt %}
@@ -12,7 +12,7 @@
 {% endif %}
 <p>{{ quiz.description }}</p>
 <p>
-  <a href="{% url 'quiz_question' quiz_name=quiz.url %}">
+  <a href="{% url 'coding:quiz_question' quiz_name=quiz.url %}">
 	{% trans "Start quiz" %}
   </a>
 </p>
