--- a/coding/templates/coding/quiz_list.html
+++ b/coding/templates/coding/quiz_list.html
@@ -1,9 +1,9 @@
-{% extends 'base.html' %}
+{% extends 'coding/base.html' %}
 {% load i18n %}
 {% load quiz_tags %}
 {% block title %}{% trans "All Quizzes" %}{% endblock %}
 
-{% block content %}
+{% block body_block %}
 <h2>{% trans "List of quizzes" %}</h2>
     {% if quiz_list %}
 		<table class="table table-bordered table-striped">
@@ -28,7 +28,7 @@
 			  <td>{{ quiz.exam_paper }}</td>
 			  <td>{{ quiz.single_attempt }}</td>
 			  <td>
-				<a href="{% url 'quiz_start_page' slug=quiz.url %}">
+				<a href="{% url 'coding:quiz_start_page' slug=quiz.url %}">
 				  {% trans "View details" %}
 				</a>
 			</tr>
