--- a/coding/templates/coding/sitting_list.html
+++ b/coding/templates/coding/sitting_list.html
@@ -1,8 +1,8 @@
-{% extends 'base.html' %}
+{% extends 'coding/base.html' %}
 {% load i18n %}
 {% block title %}{% trans "All Quizzes" %}{% endblock %}
 
-{% block content %}
+{% block body_block %}
 <h2>{% trans "List of complete exams" %}</h2>
     {% if sitting_list %}
 
@@ -38,7 +38,7 @@
 			  <td>{{ sitting.end|date }}</td>
 			  <td>{{ sitting.get_percent_correct }}</td>
 			  <td>
-				<a href="{% url 'quiz_marking_detail' pk=sitting.id %}">
+				<a href="{% url 'coding:quiz_marking_detail' pk=sitting.id %}">
 				  {% trans "View details" %}
 				</a>
 			</tr>
