--- a/coding/templates/coding/base.html
+++ b/coding/templates/coding/base.html
@@ -85,7 +85,7 @@
                             </li>
                             {% endif %}
                             <li class="nav-item">
-                                <a href="#" class="nav-link">About</a>
+                                <a href="{% url 'coding:about' %}" class="nav-link">About</a>
                             </li>
 
                             <li class="nav-item dropdown">
