IDE Solution Added!

--- a/coding/templates/coding/game.html
+++ b/coding/templates/coding/game.html
@@ -29,8 +29,8 @@
         </button>    
 
         <button type="button" class="btn btn-primary btn-sm mr-0 mb-2 mt-2 float-left" data-toggle="tooltip" data-placement="top" title="Click To Show Or Hide" onclick="ShowImage()">
-            Solution
-            <span class="mr-1"><span class="fas fa-expand"></span></span>
+            Hint
+            <span class="mr-1"><span class="fas fa-align-justify"></span></span>
         </button>
     </div>
 
